# InstantMessage

./: .gitignore  HttpMgr.cpp  HttpMgr.h  InstantMessage.pro  Singleton.hpp  global.h  mainwindow.h  registerdialog.cpp  registerdialog.h
Client/InstantMessage/: HttpMgr.cpp  HttpMgr.h  InstantMessage.pro  clickedlabel.cpp  clickedlabel.h  global.cpp  global.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  registerdialog.cpp  registerdialog.h  registerdialog.ui  resetdialog.cpp  resetdialog.h  timerbtn.cpp  timerbtn.h
Client/InstantMessage/style/: stylesheet.qss
Server/ChatServer/: CMakeLists.txt  CServer.cpp  CServer.h  CSession.cpp  CSession.h  ChatServer.cpp  LogicSystem.cpp  LogicSystem.h  MsgNode.cpp  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  StatusGrpcClient.cpp  StatusGrpcClient.h  config.ini  const.h  data.h  message.grpc.pb.h  message.pb.cc
Server/GateServer/: CMakeLists.txt  ConfigMgr.cpp  GateServer.cpp  HttpConnection.cpp  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  const.h  message.pb.h  message.proto
Server/StatusServer/: CMakeLists.txt  ConfigMgr.cpp  ConfigMgr.h  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  StatusServer.cpp  StatusServiceImpl.cpp  StatusServiceImpl.h  config.ini  const.h  message.grpc.pb.cc
Server/VerifyServer/: config.js  config.json  const.js  email.js  message.proto  package-lock.json  package.json  proto.js  server.js
